--- a/src/main/java/GUI/ui/GUI.form
+++ b/src/main/java/GUI/ui/GUI.form
@@ -184,18 +184,6 @@
                       <text value=""/>
                     </properties>
                   </component>
-                  <component id="13990" class="javax.swing.JSpinner" binding="spinnerMotor">
-                    <constraints>
-                      <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties/>
-                  </component>
-                  <component id="f88e4" class="javax.swing.JSpinner" binding="spinnerAusstattung">
-                    <constraints>
-                      <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties/>
-                  </component>
                   <grid id="8f200" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
@@ -336,6 +324,26 @@
                     </constraints>
                     <properties>
                       <text value="Preis"/>
+                    </properties>
+                  </component>
+                  <component id="83979" class="javax.swing.JTextField" binding="textFieldASID">
+                    <constraints>
+                      <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <editable value="false"/>
+                    </properties>
+                  </component>
+                  <component id="eea69" class="javax.swing.JTextField" binding="textFieldMTID">
+                    <constraints>
+                      <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <editable value="false"/>
                     </properties>
                   </component>
                 </children>
