--- a/src/main/java/GUI/ui/GUI.form
+++ b/src/main/java/GUI/ui/GUI.form
@@ -66,7 +66,7 @@
                   </component>
                 </children>
               </grid>
-              <grid id="f9980" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="f9980" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -76,7 +76,7 @@
                 <children>
                   <component id="f84e0" class="javax.swing.JTextField" binding="MAINtextFieldATID">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
                       </grid>
                     </constraints>
@@ -86,7 +86,7 @@
                   </component>
                   <component id="63a60" class="javax.swing.JTextField" binding="MAINtextFieldASID">
                     <constraints>
-                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                      <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
                       </grid>
                     </constraints>
@@ -96,12 +96,36 @@
                   </component>
                   <component id="f2064" class="javax.swing.JTextField" binding="MAINtextFieldMTID">
                     <constraints>
-                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                      <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
                       </grid>
                     </constraints>
                     <properties>
                       <editable value="false"/>
+                    </properties>
+                  </component>
+                  <component id="6c83f" class="javax.swing.JLabel">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="1" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="AutoID"/>
+                    </properties>
+                  </component>
+                  <component id="7e81e" class="javax.swing.JLabel">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="AusstattungID"/>
+                    </properties>
+                  </component>
+                  <component id="1bf61" class="javax.swing.JLabel">
+                    <constraints>
+                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="MotorID"/>
                     </properties>
                   </component>
                 </children>
@@ -300,7 +324,7 @@
                       <text value="MotorID"/>
                     </properties>
                   </component>
-                  <component id="381fb" class="javax.swing.JTextField" binding="textFieldAID">
+                  <component id="381fb" class="javax.swing.JTextField" binding="ATtextFieldATID">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
@@ -326,7 +350,7 @@
                       <text value="Preis"/>
                     </properties>
                   </component>
-                  <component id="83979" class="javax.swing.JTextField" binding="textFieldASID">
+                  <component id="83979" class="javax.swing.JTextField" binding="ATtextFieldASID">
                     <constraints>
                       <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
@@ -336,7 +360,7 @@
                       <editable value="false"/>
                     </properties>
                   </component>
-                  <component id="eea69" class="javax.swing.JTextField" binding="textFieldMTID">
+                  <component id="eea69" class="javax.swing.JTextField" binding="ATtextFieldMTID">
                     <constraints>
                       <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
@@ -378,7 +402,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="ebd86" class="javax.swing.JTextField" binding="textFieldAAID">
+                  <component id="ebd86" class="javax.swing.JTextField" binding="AStextFieldASID">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
@@ -665,7 +689,7 @@
                       <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                     </constraints>
                   </vspacer>
-                  <component id="c3389" class="javax.swing.JTextField" binding="textFieldMotorID">
+                  <component id="c3389" class="javax.swing.JTextField" binding="MTtextFieldMTID">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
